@@ -41,7 +41,7 @@
 void *
 func(void * arg)
 {
-  int failed = (int) arg;
+  size_t failed = (size_t) arg;
 
   pthread_exit(arg);
 
@@ -49,7 +49,7 @@ func(void * arg)
   /*
    * Trick gcc compiler into not issuing a warning here
    */
-  assert(failed - (int)arg);
+  assert(failed - (size_t) arg);
 
   return NULL;
 }
